# AnkamaLauncherEmulator

./: .gitignore  LICENSE  README.md  main.py  main.spec  pyproject.toml
.github/workflows/: build-windows.yml
ankama_launcher_emulator/: _version.py  consts.py
ankama_launcher_emulator/decrypter/: crypto_helper.py  device.py
ankama_launcher_emulator/gui/: account_card.py  add_account_dialog.py  app.py  consts.py  download_banner.py  embedded_auth_browser_dialog.py  game_selector_card.py  main_window.py  portable_account_dialogs.py  proxy_dialog.py  settings_dialog.py  shield_browser_dialog.py  shield_dialog.py  style.py  update_banner.py
ankama_launcher_emulator/haapi/: account_manager.py  account_meta.py  account_persistence.py  aws_waf_bypass.py  haapi.py  pkce_auth.py  portable_exchange.py  shield.py  zaap_version.py
ankama_launcher_emulator/interfaces/: deciphered_api_key.py
ankama_launcher_emulator/proxy/dofus3/: connection_proxy.py  proxy_listener.py
ankama_launcher_emulator/proxy/retro/: retro_proxy.py
ankama_launcher_emulator/server/: handler.py  server.py
ankama_launcher_emulator/server/dofus3/: launch.py  script.js
ankama_launcher_emulator/server/retro/: launch.py  script.js
ankama_launcher_emulator/utils/: app_config.py  asar_parser.py  capture_shield.py  proxy.py  proxy_store.py  updater.py
tests/: _debug_session.py  debug_browser_auth.py  debug_gui_demo.py  debug_login.py  test_asar_parser.py  test_auth_flows.py  test_gui_shell.py  test_updater.py
